# Engram

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/api/v1/: schemas.py
backend/app/api/v1/routes/: documents.py
backend/app/domain/schemas/: analysis.py
backend/app/domain/services/: rag_service.py
backend/app/infrastructure/processing/: processor_service.py
backend/app/workers/: document_worker.py
backend/scripts/: ragas_eval.py
